Fix checkbox not having enough gap on safari

--- a/src/style.css
+++ b/src/style.css
@@ -52,6 +52,7 @@ input {
 .checkbox-wrapper {
     display: flex;
     align-items: center;
+    gap: 8px;
 }
 
 /* Checkbox and agreement statement layout */
